--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -6,33 +6,7 @@
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="pn150102062832"></A><B><U><big>pn150102062832</big></U></B>
-#Start recording tcl command: 1/2/2015 05:05:34
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-#Stop recording: 1/2/2015 06:28:32
-
-
-
-<A name="pn150102083521"></A><B><U><big>pn150102083521</big></U></B>
-#Start recording tcl command: 1/2/2015 08:04:59
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_run Export -impl SevenSegClock -task Jedecgen
-#Stop recording: 1/2/2015 08:35:21
-
-
-
-<A name="pn150103010324"></A><B><U><big>pn150103010324</big></U></B>
-#Start recording tcl command: 1/3/2015 01:02:59
-#Project Location: C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_project close
-#Stop recording: 1/3/2015 01:03:24
-
-
-
-<A name="pn150106050226"></A><B><U><big>pn150106050226</big></U></B>
+<PRE><A name="pn150106050226"></A><B><U><big>pn150106050226</big></U></B>
 #Start recording tcl command: 1/6/2015 02:15:00
 #Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
 prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
@@ -124,6 +98,33 @@ pgr_project close
 pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
 pgr_project close
 #Stop recording: 3/15/2015 01:40:10
+
+
+
+<A name="pn150315075551"></A><B><U><big>pn150315075551</big></U></B>
+#Start recording tcl command: 3/15/2015 07:43:58
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+#Stop recording: 3/15/2015 07:55:51
+
+
+
+<A name="pn150315202622"></A><B><U><big>pn150315202622</big></U></B>
+#Start recording tcl command: 3/15/2015 17:25:21
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+prj_run Export -impl SevenSegClock -task Jedecgen
+#Stop recording: 3/15/2015 20:26:22
+
+
+
+<A name="pn150316023146"></A><B><U><big>pn150316023146</big></U></B>
+#Start recording tcl command: 3/16/2015 02:27:19
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+#Stop recording: 3/16/2015 02:31:46
 
 
 
