--- a/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
+++ b/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
@@ -9,7 +9,7 @@
 <PRE><A name="Map_Twr"></A><B><U><big>Lattice Synthesis Timing Report</big></U></B>
 --------------------------------------------------------------------------------
 Lattice Synthesis Timing Report, Version  
-Mon Mar 16 03:27:54 2015
+Mon Mar 16 23:34:06 2015
 
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&T Corp.   All rights reserved.
@@ -27,9 +27,90 @@ Report level:    verbose report, limited to 3 items per constraint
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk2 [get_nets osc_clk_c_c]
+Constraint: create_clock -period 5.000000 -name clk3 [get_nets osc_clk_c_c]
             0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
+
+
+================================================================================
+Constraint: create_clock -period 5.000000 -name clk2 [get_nets heartbeat_c]
+            11 items scored, 0 timing errors detected.
+--------------------------------------------------------------------------------
+
+
+Passed:  The following path meets requirements by 3.063ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1P3IX    CK             Seg_i0_i5  (from cnt_71_72__i7 +)
+   Destination:    FD1P3IX    D              Seg_i0_i6  (to cnt_71_72__i7 +)
+
+   Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.791ns data_path Seg_i0_i5 to Seg_i0_i6 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.063ns
+
+ Path Details: Seg_i0_i5 to Seg_i0_i6
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              Seg_i0_i5 (from cnt_71_72__i7)
+Route         1   e 1.388                                  Seg[5]
+                  --------
+                    1.791  (22.5% logic, 77.5% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.063ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1P3IX    CK             Seg_i0_i4  (from cnt_71_72__i7 +)
+   Destination:    FD1P3IX    D              Seg_i0_i5  (to cnt_71_72__i7 +)
+
+   Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.791ns data_path Seg_i0_i4 to Seg_i0_i5 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.063ns
+
+ Path Details: Seg_i0_i4 to Seg_i0_i5
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              Seg_i0_i4 (from cnt_71_72__i7)
+Route         1   e 1.388                                  Seg[4]
+                  --------
+                    1.791  (22.5% logic, 77.5% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.063ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1P3IX    CK             Seg_i0_i3  (from cnt_71_72__i7 +)
+   Destination:    FD1P3IX    D              Seg_i0_i4  (to cnt_71_72__i7 +)
+
+   Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.791ns data_path Seg_i0_i3 to Seg_i0_i4 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.063ns
+
+ Path Details: Seg_i0_i3 to Seg_i0_i4
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              Seg_i0_i3 (from cnt_71_72__i7)
+Route         1   e 1.388                                  Seg[3]
+                  --------
+                    1.791  (22.5% logic, 77.5% route), 1 logic levels.
+
+Report: 1.937 ns is the maximum delay for this constraint.
+
 
 
 ================================================================================
@@ -72,6 +153,30 @@ Passed:  The following path meets requirements by 3.449ns
 
  Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
 
+   Source:         FD1S3AX    CK             tmp_i91  (from clk +)
+   Destination:    FD1S3AX    D              tmp_i92  (to clk +)
+
+   Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.405ns data_path tmp_i91 to tmp_i92 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
+
+ Path Details: tmp_i91 to tmp_i92
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              tmp_i91 (from clk)
+Route         2   e 1.002                                  tmp[90]
+                  --------
+                    1.405  (28.7% logic, 71.3% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.449ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
    Source:         FD1S3AX    CK             tmp_i90  (from clk +)
    Destination:    FD1S3AX    D              tmp_i91  (to clk +)
 
@@ -91,30 +196,6 @@ Route         2   e 1.002                                  tmp[89]
                   --------
                     1.405  (28.7% logic, 71.3% route), 1 logic levels.
 
-
-Passed:  The following path meets requirements by 3.449ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1S3AX    CK             tmp_i89  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i90  (to clk +)
-
-   Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
-
- Constraint Details:
-
-      1.405ns data_path tmp_i89 to tmp_i90 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
-
- Path Details: tmp_i89 to tmp_i90
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i89 (from clk)
-Route         2   e 1.002                                  tmp[88]
-                  --------
-                    1.405  (28.7% logic, 71.3% route), 1 logic levels.
-
 Report: 1.551 ns is the maximum delay for this constraint.
 
 
@@ -125,7 +206,10 @@ Constraint                              |   Constraint|       Actual|Levels
 --------------------------------------------------------------------------------
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk2 [get_nets osc_clk_c_c]             |            -|            -|     0  
+clk3 [get_nets osc_clk_c_c]             |            -|            -|     0  
+                                        |             |             |
+create_clock -period 5.000000 -name     |             |             |
+clk2 [get_nets heartbeat_c]             |     5.000 ns|     1.937 ns|     1  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
 clk1 [get_nets latch_c]                 |            -|            -|     0  
@@ -145,10 +229,10 @@ All constraints were met.
 
 Timing errors: 0  Score: 0
 
-Constraints cover  94 paths, 95 nets, and 269 connections (56.0% coverage)
+Constraints cover  105 paths, 107 nets, and 293 connections (74.2% coverage)
 
 
-Peak memory: 187465728 bytes, TRCE: 741376 bytes, DLYMAN: 0 bytes
+Peak memory: 186544128 bytes, TRCE: 901120 bytes, DLYMAN: 270336 bytes
 CPU_TIME_REPORT: 0 secs 
 
 
