--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
@@ -12,7 +12,7 @@ Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Mon Mar 16 03:27:56 2015
+Mon Mar 16 23:34:08 2015
 
 /usr/local/diamond/3.3_x64/ispfpga/bin/lin64/par -f
 SevenSegClock_SevenSegClock.p2t SevenSegClock_SevenSegClock_map.ncd
@@ -25,7 +25,7 @@ Preference file: SevenSegClock_SevenSegClock.prf.
 Level/      Number      Worst       Timing      Worst       Timing      Run         NCD
 Cost [ncd]  Unrouted    Slack       Score       Slack(hold) Score(hold) Time        Status
 ----------  --------    -----       ------      ----------- ----------- -----       ------
-5_1   *     0           478.293     0           0.395       0           09          Complete        
+5_1   *     0           478.412     0           0.395       0           09          Complete        
 
 
 * : Design saved.
@@ -35,7 +35,7 @@ Total (real) run time for 1-seed: 9 secs
 par done!
 
 Lattice Place and Route Report for Design &quot;SevenSegClock_SevenSegClock_map.ncd&quot;
-Mon Mar 16 03:27:56 2015
+Mon Mar 16 23:34:08 2015
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
@@ -65,29 +65,27 @@ Ignore Preference Error(s):  True
    PIO (prelim)   84+4(JTAG)/108     81% used
                   84+4(JTAG)/108     81% bonded
 
-   SLICE            140/320          43% used
+   SLICE            101/320          31% used
 
    OSC                1/1           100% used
 
 
-Number of Signals: 358
-Number of Connections: 826
+Number of Signals: 298
+Number of Connections: 576
 
 Pin Constraint Summary:
    24 out of 24 pins locked (100% locked).
 
-The following 3 signals are selected to use the primary clock routing resources:
+The following 2 signals are selected to use the primary clock routing resources:
     clk_c (driver: clk, clk load #: 48)
-    n845 (driver: SLICE_157, clk load #: 44)
     latch_c (driver: latch, clk load #: 40)
 
 WARNING - par: Signal &quot;clk_c&quot; is selected to use Primary clock resources. However, its driver comp &quot;clk&quot; is located at &quot;67&quot;, which is not a dedicated pin for connecting to Primary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
 WARNING - par: Signal &quot;latch_c&quot; is selected to use Primary clock resources. However, its driver comp &quot;latch&quot; is located at &quot;65&quot;, which is not a dedicated pin for connecting to Primary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
 
-The following 3 signals are selected to use the secondary clock routing resources:
-    n2448 (driver: SLICE_161, clk load #: 0, sr load #: 16, ce load #: 0)
-    n2470 (driver: SLICE_161, clk load #: 0, sr load #: 16, ce load #: 0)
-    osc_clk_c_c (driver: OSCH_inst, clk load #: 6, sr load #: 0, ce load #: 0)
+The following 2 signals are selected to use the secondary clock routing resources:
+    heartbeat_c (driver: SLICE_0, clk load #: 8, sr load #: 0, ce load #: 0)
+    osc_clk_c_c (driver: OSCH_inst, clk load #: 5, sr load #: 0, ce load #: 0)
 
 No signal is selected as Global Set/Reset.
 .
@@ -97,12 +95,12 @@ Finished Placer Phase 0.  REAL time: 0 secs
 
 Starting Placer Phase 1.
 ....................
-Placer score = 44258.
+Placer score = 56898.
 Finished Placer Phase 1.  REAL time: 8 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  44012
+Placer score =  56557
 Finished Placer Phase 2.  REAL time: 8 secs 
 
 
@@ -118,14 +116,12 @@ Global Clock Resources:
 
 Quadrants All (TL, TR, BL, BR) - Global Clocks:
   PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;67 (PB18D)&quot;, clk load = 48
-  PRIMARY &quot;n845&quot; from F1 on comp &quot;SLICE_157&quot; on site &quot;R2C13C&quot;, clk load = 44
   PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;65 (PB18C)&quot;, clk load = 40
-  SECONDARY &quot;n2448&quot; from F1 on comp &quot;SLICE_161&quot; on site &quot;R7C14B&quot;, clk load = 0, ce load = 0, sr load = 16
-  SECONDARY &quot;n2470&quot; from F0 on comp &quot;SLICE_161&quot; on site &quot;R7C14B&quot;, clk load = 0, ce load = 0, sr load = 16
-  SECONDARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 6, ce load = 0, sr load = 0
+  SECONDARY &quot;heartbeat_c&quot; from Q0 on comp &quot;SLICE_0&quot; on site &quot;R7C14A&quot;, clk load = 8, ce load = 0, sr load = 0
+  SECONDARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 5, ce load = 0, sr load = 0
 
-  PRIMARY  : 3 out of 8 (37%)
-  SECONDARY: 3 out of 8 (37%)
+  PRIMARY  : 2 out of 8 (25%)
+  SECONDARY: 2 out of 8 (25%)
 
 Edge Clocks:
   No edge clock selected.
@@ -143,27 +139,24 @@ I/O Bank Usage Summary:
 +----------+----------------+------------+-----------+
 | I/O Bank | Usage          | Bank Vccio | Bank Vref |
 +----------+----------------+------------+-----------+
-| 0        | 23 / 28 ( 82%) | 3.3V       | -         |
-| 1        | 15 / 26 ( 57%) | 3.3V       | -         |
+| 0        | 24 / 28 ( 85%) | 3.3V       | -         |
+| 1        | 19 / 26 ( 73%) | 3.3V       | -         |
 | 2        | 27 / 28 ( 96%) | 3.3V       | -         |
-| 3        | 19 / 26 ( 73%) | 3.3V       | -         |
+| 3        | 14 / 26 ( 53%) | 3.3V       | -         |
 +----------+----------------+------------+-----------+
 
-Total placer CPU time: 7 secs 
+Total placer CPU time: 8 secs 
 
 Dumping design to file SevenSegClock_SevenSegClock.dir/5_1.ncd.
 
-0 connections routed; 826 unrouted.
+0 connections routed; 576 unrouted.
 Starting router resource preassignment
 WARNING - par: The driver of primary clock net clk_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 WARNING - par: The driver of primary clock net latch_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 
-WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n2601 loads=2 clock_loads=2
-
 Completed router resource preassignment. Real time: 8 secs 
 
-Start NBR router at Mon Mar 16 03:28:04 UTC 2015
+Start NBR router at Mon Mar 16 23:34:16 UTC 2015
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -178,44 +171,35 @@ Note: NBR uses a different method to calculate timing slacks. The
       your design. Thanks.                                       
 *****************************************************************
 
-Start NBR special constraint process at Mon Mar 16 03:28:04 UTC 2015
+Start NBR special constraint process at Mon Mar 16 23:34:16 UTC 2015
 
-Start NBR section for initial routing at Mon Mar 16 03:28:04 UTC 2015
+Start NBR section for initial routing at Mon Mar 16 23:34:16 UTC 2015
 Level 4, iteration 1
-16(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+18(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.412ns/0.000ns; real time: 9 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Mon Mar 16 03:28:05 UTC 2015
+Start NBR section for normal routing at Mon Mar 16 23:34:17 UTC 2015
 Level 4, iteration 1
-13(0.02%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+9(0.01%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.412ns/0.000ns; real time: 9 secs 
 Level 4, iteration 2
-5(0.01%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
-Level 4, iteration 3
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
-Level 4, iteration 4
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
-Level 4, iteration 5
 2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
-Level 4, iteration 6
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.412ns/0.000ns; real time: 9 secs 
+Level 4, iteration 3
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.412ns/0.000ns; real time: 9 secs 
 
-Start NBR section for setup/hold timing optimization with effort level 3 at Mon Mar 16 03:28:05 UTC 2015
+Start NBR section for setup/hold timing optimization with effort level 3 at Mon Mar 16 23:34:17 UTC 2015
 
-Start NBR section for re-routing at Mon Mar 16 03:28:05 UTC 2015
+Start NBR section for re-routing at Mon Mar 16 23:34:17 UTC 2015
 Level 4, iteration 1
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.412ns/0.000ns; real time: 9 secs 
 
-Start NBR section for post-routing at Mon Mar 16 03:28:05 UTC 2015
+Start NBR section for post-routing at Mon Mar 16 23:34:17 UTC 2015
 
 End NBR router with 0 unrouted connection
 
@@ -223,20 +207,17 @@ NBR Summary
 -----------
   Number of unrouted connections : 0 (0.00%)
   Number of connections with timing violations : 0 (0.00%)
-  Estimated worst slack&lt;setup&gt; : 478.293ns
+  Estimated worst slack&lt;setup&gt; : 478.412ns
   Timing score&lt;setup&gt; : 0
 -----------
 Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored.
 
 
 
-WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n2601 loads=2 clock_loads=2
-
 Total CPU time 9 secs 
 Total REAL time: 9 secs 
 Completely routed.
-End of route.  826 routed (100.00%); 0 unrouted.
+End of route.  576 routed (100.00%); 0 unrouted.
 Checking DRC ... 
 No errors found.
 
@@ -252,7 +233,7 @@ All signals are completely routed.
 
 PAR_SUMMARY::Run status = completed
 PAR_SUMMARY::Number of unrouted conns = 0
-PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 478.293
+PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 478.412
 PAR_SUMMARY::Timing score&lt;setup/&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 0.395
 PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
