--- a/Lattice_FPGA/SevenSegClock/synthesis_lse.html
+++ b/Lattice_FPGA/SevenSegClock/synthesis_lse.html
@@ -14,7 +14,7 @@ Copyright (c) 1995 AT&T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Mon Mar 16 03:27:53 2015
+Mon Mar 16 23:34:06 2015
 
 
 Command Line:  synthesis -f SevenSegClock_SevenSegClock_lattice.synproj -gui 
@@ -83,7 +83,7 @@ Technology check ok...
 Compile design.
 Compile Design Begin
 Top module name (Verilog): AutoShift
-INFO - synthesis: /home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift_1.v(8): compiling module AutoShift. VERI-1018
+INFO - synthesis: /home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift_1.v(9): compiling module AutoShift. VERI-1018
 INFO - synthesis: /usr/local/diamond/3.3_x64/ispfpga/userware/unix/SYNTHESIS_HEADERS/machxo2.v(1793): compiling module OSCH(NOM_FREQ="2.08"). VERI-1018
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00a/data/xo2alib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00/data/xo2clib.ngl'...
@@ -105,47 +105,49 @@ Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00a/data/xo2alib.ngl
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00/data/xo2clib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/mg5g00/data/mg5glib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/or5g00/data/orc5glib.ngl'...
-WARNING - synthesis: logical net 'cnt_662_add_4_11/CO' has no load.
-WARNING - synthesis: logical net 'cnt_662_add_4_11/S1' has no load.
-WARNING - synthesis: logical net 'cnt_662_add_4_1/S0' has no load.
+WARNING - synthesis: logical net 'cnt_71_72_add_4_9/CO' has no load.
+WARNING - synthesis: logical net 'cnt_71_72_add_4_9/S1' has no load.
+WARNING - synthesis: logical net 'cnt_71_72_add_4_1/S0' has no load.
 WARNING - synthesis: DRC complete with 3 warnings.
 All blocks are expanded and NGD expansion is successful.
 Writing NGD file SevenSegClock_SevenSegClock.ngd.
 
 ################### Begin Area Report (AutoShift)######################
-Number of register bits => 268 of 964 (27 % )
-CCU2D => 6
-FD1S1I => 83
-FD1S3AX => 185
+Number of register bits => 196 of 964 (20 % )
+CCU2D => 5
+FD1P3AY => 1
+FD1P3IX => 6
+FD1S3AX => 183
+FD1S3AY => 1
+FD1S3IX => 5
 GSR => 1
 IB => 3
-LUT4 => 71
+LUT4 => 86
 OB => 81
 OSCH => 1
 ################### End Area Report ##################
 
 ################### Begin Clock Report ######################
 Clock Nets
-Number of Clocks: 5
+Number of Clocks: 4
   Net : clk_c, loads : 95
   Net : latch_c, loads : 80
-  Net : n845, loads : 80
-  Net : osc_clk_c_c, loads : 10
-  Net : n2601, loads : 3
+  Net : heartbeat_c, loads : 15
+  Net : osc_clk_c_c, loads : 8
 Clock Enable Nets
-Number of Clock Enables: 0
+Number of Clock Enables: 1
 Highest fanout non-clock nets
 Top 10 highest fanout non-clock nets:
-  Net : segment_0, loads : 60
-  Net : segment_1, loads : 59
-  Net : segment_2, loads : 58
-  Net : n2470, loads : 28
-  Net : n2448, loads : 28
-  Net : heartbeat_c, loads : 13
-  Net : cnt_8, loads : 12
-  Net : cnt_7, loads : 12
-  Net : cnt_6, loads : 10
-  Net : n2445, loads : 4
+  Net : n114, loads : 14
+  Net : Seg_5, loads : 10
+  Net : Seg_4, loads : 10
+  Net : Seg_3, loads : 10
+  Net : Seg_2, loads : 10
+  Net : Seg_1, loads : 10
+  Net : Seg_0, loads : 10
+  Net : Seg_6, loads : 8
+  Net : Led_4, loads : 6
+  Net : Led_3, loads : 6
 ################### End Clock Report ##################
 
 <A name="lse_trs"></A><B><U><big>Timing Report Summary</big></U></B>
@@ -155,7 +157,10 @@ Constraint                              |   Constraint|       Actual|Levels
 --------------------------------------------------------------------------------
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk2 [get_nets osc_clk_c_c]             |            -|            -|     0  
+clk3 [get_nets osc_clk_c_c]             |            -|            -|     0  
+                                        |             |             |
+create_clock -period 5.000000 -name     |             |             |
+clk2 [get_nets heartbeat_c]             |  200.000 MHz|  516.262 MHz|     1  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
 clk1 [get_nets latch_c]                 |            -|            -|     0  
@@ -169,10 +174,10 @@ clk0 [get_nets clk_c]                   |  200.000 MHz|  644.745 MHz|     1
 All constraints were met.
 
 
-Peak Memory Usage: 180.781  MB
+Peak Memory Usage: 179.906  MB
 
 --------------------------------------------------------------
-Elapsed CPU time for LSE flow : 0.909  secs
+Elapsed CPU time for LSE flow : 0.598  secs
 --------------------------------------------------------------
 
 
