--- a/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
+++ b/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
@@ -9,7 +9,7 @@
 <PRE><A name="Map_Twr"></A><B><U><big>Lattice Synthesis Timing Report</big></U></B>
 --------------------------------------------------------------------------------
 Lattice Synthesis Timing Report, Version  
-Mon Mar 16 23:34:06 2015
+Sat Mar 21 02:49:15 2015
 
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&T Corp.   All rights reserved.
@@ -27,23 +27,158 @@ Report level:    verbose report, limited to 3 items per constraint
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk3 [get_nets osc_clk_c_c]
+Constraint: create_clock -period 5.000000 -name clk4 [get_nets pwm_c]
             0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk2 [get_nets heartbeat_c]
+Constraint: create_clock -period 5.000000 -name clk3 [get_nets latch_c]
+            0 items scored, 0 timing errors detected.
+--------------------------------------------------------------------------------
+
+
+================================================================================
+Constraint: create_clock -period 5.000000 -name clk2 [get_nets clk_c]
+            50 items scored, 0 timing errors detected.
+--------------------------------------------------------------------------------
+
+
+Passed:  The following path meets requirements by 3.352ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1S3AX    CK             tmp_i6  (from clk +)
+   Destination:    FD1S3AX    D              tmp_i7  (to clk +)
+
+   Delay:                   1.502ns  (26.8% logic, 73.2% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.502ns data_path tmp_i6 to tmp_i7 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.352ns
+
+ Path Details: tmp_i6 to tmp_i7
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              tmp_i6 (from clk)
+Route         3   e 1.099                                  tmp[5]
+                  --------
+                    1.502  (26.8% logic, 73.2% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.352ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1S3AX    CK             tmp_i5  (from clk +)
+   Destination:    FD1S3AX    D              tmp_i6  (to clk +)
+
+   Delay:                   1.502ns  (26.8% logic, 73.2% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.502ns data_path tmp_i5 to tmp_i6 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.352ns
+
+ Path Details: tmp_i5 to tmp_i6
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              tmp_i5 (from clk)
+Route         3   e 1.099                                  tmp[4]
+                  --------
+                    1.502  (26.8% logic, 73.2% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.352ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1S3AX    CK             tmp_i4  (from clk +)
+   Destination:    FD1S3AX    D              tmp_i5  (to clk +)
+
+   Delay:                   1.502ns  (26.8% logic, 73.2% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.502ns data_path tmp_i4 to tmp_i5 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.352ns
+
+ Path Details: tmp_i4 to tmp_i5
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              tmp_i4 (from clk)
+Route         3   e 1.099                                  tmp[3]
+                  --------
+                    1.502  (26.8% logic, 73.2% route), 1 logic levels.
+
+Report: 1.648 ns is the maximum delay for this constraint.
+
+
+
+================================================================================
+Constraint: create_clock -period 5.000000 -name clk1 [get_nets cnt[0]]
             11 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
+
+
+Passed:  The following path meets requirements by 3.040ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1P3IX    CK             Seg_i0_i4  (from cnt_94__i0 +)
+   Destination:    FD1P3IX    D              Seg_i0_i5  (to cnt_94__i0 +)
+
+   Delay:                   1.814ns  (22.2% logic, 77.8% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.814ns data_path Seg_i0_i4 to Seg_i0_i5 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.040ns
+
+ Path Details: Seg_i0_i4 to Seg_i0_i5
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              Seg_i0_i4 (from cnt_94__i0)
+Route         1   e 1.411                                  Seg[4]
+                  --------
+                    1.814  (22.2% logic, 77.8% route), 1 logic levels.
+
+
+Passed:  The following path meets requirements by 3.040ns
+
+ Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
+
+   Source:         FD1P3IX    CK             Seg_i0_i3  (from cnt_94__i0 +)
+   Destination:    FD1P3IX    D              Seg_i0_i4  (to cnt_94__i0 +)
+
+   Delay:                   1.814ns  (22.2% logic, 77.8% route), 1 logic levels.
+
+ Constraint Details:
+
+      1.814ns data_path Seg_i0_i3 to Seg_i0_i4 meets
+      5.000ns delay constraint less
+      0.146ns L_S requirement (totaling 4.854ns) by 3.040ns
+
+ Path Details: Seg_i0_i3 to Seg_i0_i4
+
+   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
+L_CO        ---     0.403             CK to Q              Seg_i0_i3 (from cnt_94__i0)
+Route         1   e 1.411                                  Seg[3]
+                  --------
+                    1.814  (22.2% logic, 77.8% route), 1 logic levels.
 
 
 Passed:  The following path meets requirements by 3.063ns
 
  Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
 
-   Source:         FD1P3IX    CK             Seg_i0_i5  (from cnt_71_72__i7 +)
-   Destination:    FD1P3IX    D              Seg_i0_i6  (to cnt_71_72__i7 +)
+   Source:         FD1P3IX    CK             Seg_i0_i5  (from cnt_94__i0 +)
+   Destination:    FD1P3IX    D              Seg_i0_i6  (to cnt_94__i0 +)
 
    Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
 
@@ -56,148 +191,19 @@ Passed:  The following path meets requirements by 3.063ns
  Path Details: Seg_i0_i5 to Seg_i0_i6
 
    Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              Seg_i0_i5 (from cnt_71_72__i7)
+L_CO        ---     0.403             CK to Q              Seg_i0_i5 (from cnt_94__i0)
 Route         1   e 1.388                                  Seg[5]
                   --------
                     1.791  (22.5% logic, 77.5% route), 1 logic levels.
 
-
-Passed:  The following path meets requirements by 3.063ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1P3IX    CK             Seg_i0_i4  (from cnt_71_72__i7 +)
-   Destination:    FD1P3IX    D              Seg_i0_i5  (to cnt_71_72__i7 +)
-
-   Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
-
- Constraint Details:
-
-      1.791ns data_path Seg_i0_i4 to Seg_i0_i5 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.063ns
-
- Path Details: Seg_i0_i4 to Seg_i0_i5
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              Seg_i0_i4 (from cnt_71_72__i7)
-Route         1   e 1.388                                  Seg[4]
-                  --------
-                    1.791  (22.5% logic, 77.5% route), 1 logic levels.
-
-
-Passed:  The following path meets requirements by 3.063ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1P3IX    CK             Seg_i0_i3  (from cnt_71_72__i7 +)
-   Destination:    FD1P3IX    D              Seg_i0_i4  (to cnt_71_72__i7 +)
-
-   Delay:                   1.791ns  (22.5% logic, 77.5% route), 1 logic levels.
-
- Constraint Details:
-
-      1.791ns data_path Seg_i0_i3 to Seg_i0_i4 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.063ns
-
- Path Details: Seg_i0_i3 to Seg_i0_i4
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              Seg_i0_i3 (from cnt_71_72__i7)
-Route         1   e 1.388                                  Seg[3]
-                  --------
-                    1.791  (22.5% logic, 77.5% route), 1 logic levels.
-
-Report: 1.937 ns is the maximum delay for this constraint.
+Report: 1.960 ns is the maximum delay for this constraint.
 
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk1 [get_nets latch_c]
+Constraint: create_clock -period 5.000000 -name clk0 [get_nets osc_clk_c_c]
             0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
-
-
-================================================================================
-Constraint: create_clock -period 5.000000 -name clk0 [get_nets clk_c]
-            50 items scored, 0 timing errors detected.
---------------------------------------------------------------------------------
-
-
-Passed:  The following path meets requirements by 3.449ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1S3AX    CK             tmp_i94  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i95  (to clk +)
-
-   Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
-
- Constraint Details:
-
-      1.405ns data_path tmp_i94 to tmp_i95 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
-
- Path Details: tmp_i94 to tmp_i95
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i94 (from clk)
-Route         2   e 1.002                                  tmp[93]
-                  --------
-                    1.405  (28.7% logic, 71.3% route), 1 logic levels.
-
-
-Passed:  The following path meets requirements by 3.449ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1S3AX    CK             tmp_i91  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i92  (to clk +)
-
-   Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
-
- Constraint Details:
-
-      1.405ns data_path tmp_i91 to tmp_i92 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
-
- Path Details: tmp_i91 to tmp_i92
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i91 (from clk)
-Route         2   e 1.002                                  tmp[90]
-                  --------
-                    1.405  (28.7% logic, 71.3% route), 1 logic levels.
-
-
-Passed:  The following path meets requirements by 3.449ns
-
- Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
-
-   Source:         FD1S3AX    CK             tmp_i90  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i91  (to clk +)
-
-   Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
-
- Constraint Details:
-
-      1.405ns data_path tmp_i90 to tmp_i91 meets
-      5.000ns delay constraint less
-      0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
-
- Path Details: tmp_i90 to tmp_i91
-
-   Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i90 (from clk)
-Route         2   e 1.002                                  tmp[89]
-                  --------
-                    1.405  (28.7% logic, 71.3% route), 1 logic levels.
-
-Report: 1.551 ns is the maximum delay for this constraint.
-
 
 <A name="mtw1_rs"></A><B><U><big>Timing Report Summary</big></U></B>
 --------------
@@ -206,16 +212,19 @@ Constraint                              |   Constraint|       Actual|Levels
 --------------------------------------------------------------------------------
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk3 [get_nets osc_clk_c_c]             |            -|            -|     0  
+clk4 [get_nets pwm_c]                   |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk2 [get_nets heartbeat_c]             |     5.000 ns|     1.937 ns|     1  
+clk3 [get_nets latch_c]                 |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk1 [get_nets latch_c]                 |            -|            -|     0  
+clk2 [get_nets clk_c]                   |     5.000 ns|     1.648 ns|     1  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk0 [get_nets clk_c]                   |     5.000 ns|     1.551 ns|     1  
+clk1 [get_nets cnt[0]]                  |     5.000 ns|     1.960 ns|     1  
+                                        |             |             |
+create_clock -period 5.000000 -name     |             |             |
+clk0 [get_nets osc_clk_c_c]             |            -|            -|     0  
                                         |             |             |
 --------------------------------------------------------------------------------
 
@@ -229,10 +238,10 @@ All constraints were met.
 
 Timing errors: 0  Score: 0
 
-Constraints cover  105 paths, 107 nets, and 293 connections (74.2% coverage)
+Constraints cover  105 paths, 107 nets, and 301 connections (61.2% coverage)
 
 
-Peak memory: 186544128 bytes, TRCE: 901120 bytes, DLYMAN: 270336 bytes
+Peak memory: 187207680 bytes, TRCE: 1146880 bytes, DLYMAN: 0 bytes
 CPU_TIME_REPORT: 0 secs 
 
 
