--- a/Lattice_FPGA/SevenSegClock/synthesis_lse.html
+++ b/Lattice_FPGA/SevenSegClock/synthesis_lse.html
@@ -14,7 +14,7 @@ Copyright (c) 1995 AT&T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Mon Mar 16 23:34:06 2015
+Sat Mar 21 02:49:15 2015
 
 
 Command Line:  synthesis -f SevenSegClock_SevenSegClock_lattice.synproj -gui 
@@ -84,7 +84,7 @@ Compile design.
 Compile Design Begin
 Top module name (Verilog): AutoShift
 INFO - synthesis: /home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift_1.v(9): compiling module AutoShift. VERI-1018
-INFO - synthesis: /usr/local/diamond/3.3_x64/ispfpga/userware/unix/SYNTHESIS_HEADERS/machxo2.v(1793): compiling module OSCH(NOM_FREQ="2.08"). VERI-1018
+INFO - synthesis: /usr/local/diamond/3.3_x64/ispfpga/userware/unix/SYNTHESIS_HEADERS/machxo2.v(1793): compiling module OSCH(NOM_FREQ="7.00"). VERI-1018
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00a/data/xo2alib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00/data/xo2clib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/mg5g00/data/mg5glib.ngl'...
@@ -105,49 +105,51 @@ Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00a/data/xo2alib.ngl
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/xo2c00/data/xo2clib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/mg5g00/data/mg5glib.ngl'...
 Loading NGL library '/usr/local/diamond/3.3_x64/ispfpga/or5g00/data/orc5glib.ngl'...
-WARNING - synthesis: logical net 'cnt_71_72_add_4_9/CO' has no load.
-WARNING - synthesis: logical net 'cnt_71_72_add_4_9/S1' has no load.
-WARNING - synthesis: logical net 'cnt_71_72_add_4_1/S0' has no load.
+WARNING - synthesis: logical net 'cnt_94_add_4_9/CO' has no load.
+WARNING - synthesis: logical net 'cnt_94_add_4_9/S1' has no load.
+WARNING - synthesis: logical net 'cnt_94_add_4_1/S0' has no load.
 WARNING - synthesis: DRC complete with 3 warnings.
 All blocks are expanded and NGD expansion is successful.
 Writing NGD file SevenSegClock_SevenSegClock.ngd.
 
 ################### Begin Area Report (AutoShift)######################
-Number of register bits => 196 of 964 (20 % )
+Number of register bits => 285 of 964 (29 % )
 CCU2D => 5
 FD1P3AY => 1
 FD1P3IX => 6
-FD1S3AX => 183
+FD1S3AX => 192
 FD1S3AY => 1
-FD1S3IX => 5
+FD1S3IX => 85
 GSR => 1
-IB => 3
-LUT4 => 86
+IB => 4
+LUT4 => 100
 OB => 81
 OSCH => 1
+PFUMX => 1
 ################### End Area Report ##################
 
 ################### Begin Clock Report ######################
 Clock Nets
-Number of Clocks: 4
+Number of Clocks: 5
   Net : clk_c, loads : 95
+  Net : osc_clk_c_c, loads : 89
   Net : latch_c, loads : 80
-  Net : heartbeat_c, loads : 15
-  Net : osc_clk_c_c, loads : 8
+  Net : cnt_0, loads : 15
+  Net : pwm_c, loads : 8
 Clock Enable Nets
 Number of Clock Enables: 1
 Highest fanout non-clock nets
 Top 10 highest fanout non-clock nets:
-  Net : n114, loads : 14
+  Net : n934, loads : 80
+  Net : n286, loads : 14
+  Net : Seg_4, loads : 11
+  Net : Seg_3, loads : 11
   Net : Seg_5, loads : 10
-  Net : Seg_4, loads : 10
-  Net : Seg_3, loads : 10
   Net : Seg_2, loads : 10
   Net : Seg_1, loads : 10
   Net : Seg_0, loads : 10
   Net : Seg_6, loads : 8
   Net : Led_4, loads : 6
-  Net : Led_3, loads : 6
 ################### End Clock Report ##################
 
 <A name="lse_trs"></A><B><U><big>Timing Report Summary</big></U></B>
@@ -157,16 +159,19 @@ Constraint                              |   Constraint|       Actual|Levels
 --------------------------------------------------------------------------------
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk3 [get_nets osc_clk_c_c]             |            -|            -|     0  
+clk4 [get_nets pwm_c]                   |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk2 [get_nets heartbeat_c]             |  200.000 MHz|  516.262 MHz|     1  
+clk3 [get_nets latch_c]                 |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk1 [get_nets latch_c]                 |            -|            -|     0  
+clk2 [get_nets clk_c]                   |  200.000 MHz|  606.796 MHz|     1  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk0 [get_nets clk_c]                   |  200.000 MHz|  644.745 MHz|     1  
+clk1 [get_nets cnt[0]]                  |  200.000 MHz|  510.204 MHz|     1  
+                                        |             |             |
+create_clock -period 5.000000 -name     |             |             |
+clk0 [get_nets osc_clk_c_c]             |            -|            -|     0  
                                         |             |             |
 --------------------------------------------------------------------------------
 
@@ -174,10 +179,10 @@ clk0 [get_nets clk_c]                   |  200.000 MHz|  644.745 MHz|     1
 All constraints were met.
 
 
-Peak Memory Usage: 179.906  MB
+Peak Memory Usage: 180.535  MB
 
 --------------------------------------------------------------
-Elapsed CPU time for LSE flow : 0.598  secs
+Elapsed CPU time for LSE flow : 0.659  secs
 --------------------------------------------------------------
 
 
